spring dependencies added

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
 plugins {
+    id 'org.springframework.boot' version '2.3.3.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'java'
 }
 
-group 'org.example'
+group 'com.klenio'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -10,5 +12,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
