certificate path changed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 # SSL
-server.port=8443
-server.ssl.key-store=classpath:name.p12
+server.port=8083
+#server.ssl.key-store=classpath:klenio.p12
+server.ssl.key-store=/etc/letsencrypt/live/api.klenio.com/klenio.p12
 server.ssl.key-store-password=password
 
 # JKS or PKCS12
 server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias=tomcat
 
 # Spring Security
-# security.require-ssl=true
+#security.require-ssl=true
