change PasswordService class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 # SSL
 server.port=8083
 #server.ssl.key-store=classpath:klenio.p12
-server.ssl.key-store=/etc/letsencrypt/live/api.klenio.com/klenio.p12
+#server.ssl.key-store=/etc/letsencrypt/live/api.klenio.com/klenio.p12
+#server.ssl.key-store-password=password
+server.ssl.key-store=classpath:klenio.p12
 server.ssl.key-store-password=password
 
 # JKS or PKCS12
